@@ -1,3 +1,8 @@
+2013-08-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCast.c (decorateType): fixed bug 2205 (return discarded if
+	  missing expected operand)
+
 2013-08-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
